--- a/scss/base/_utils.scss
+++ b/scss/base/_utils.scss
@@ -1,3 +1,39 @@
 .text-primary {
-    color: $primary-color !important;
+  color: $primary-color !important;
+}
+
+.text-underline {
+  text-decoration: underline;
+}
+
+.fw-thin {
+  font-weight: 100 !important;
+}
+
+.fw-light {
+  font-weight: 300 !important;
+}
+
+.fw-normal {
+  font-weight: 400 !important;
+}
+
+.fw-medium {
+  font-weight: 500 !important;
+}
+
+.fw-semibold {
+  font-weight: 600 !important;
+}
+
+.fw-bold {
+  font-weight: 700 !important;
+}
+
+.fw-extrabold {
+  font-weight: 800 !important;
+}
+
+.fw-black {
+  font-weight: 900 !important;
 }
