--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -50,6 +50,19 @@
   font-family: "object-fit:"+ $val;
 }
 
+@mixin fontawesome($code, $fw) {
+  font-family: "Font Awesome 5 Pro";
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  font-weight: $fw;
+  content: $code;
+}
+
 @mixin link-unstyled {
   a {
 
