--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -10,11 +10,35 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
+
+  &._object-top img {
+    object-position: top;
+  }
+
+  &._object-right img {
+    object-position: right;
+  }
+
+  &._object-bottom img {
+    object-position: bottom;
+  }
+
+  &._object-left img {
+    object-position: left;
+  }
+
+  &+div {
+    position: relative;
+    z-index: 2;
+  }
+
   img {
-      height: 100%;
-      width: 100%;
-      -o-object-fit: cover;
-      object-fit: cover;
-      font-family: 'object-fit: cover;';
+    display: block;
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    font-family: 'object-fit: cover;';
   }
 }
