--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,32 +1,25 @@
 @charset 'UTF-8';
 
 // 1. Configuration
-@import
-  'abstracts/variables',
-  'abstracts/mixins';
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 // 2. Vendors
-@import
-  'vendor-extensions/bootstrap',
-  'vendor-extensions/slick';
+@import 'vendor-extensions/bootstrap';
+@import 'vendor-extensions/slick';
 
 // 3. Base stuff
-@import
-  'base/base',
-  'base/fonts',
-  'base/spacing',
-  'base/utils';
+@import 'base/base';
+@import 'base/fonts';
+@import 'base/utils';
 
 // 4. Components
-@import
-  'components/buttons';
+@import 'components/buttons';
 
 // 5. Layout-related sections
-@import
-  'layout/header',
-  'layout/footer';
+@import 'layout/header';
+@import 'layout/footer';
 
 // 6. Page-specific styles
-@import
-  'pages/home',
-  'pages/innerpage';
+@import 'pages/home';
+@import 'pages/innerpage';
