--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,78 +1,33 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
-button,
-.btn {
-  &:focus {
-    outline: none;
-  }
-}
-
-.btn-primary {
-  background-color: $primary-color;
-  border: 1px solid $primary-color;
-  color: #fff;
-
-  &:hover {
-    border: 1px solid $primary-color;
-    background-color: $primary-color;
-    color: #fff;
-  }
-
-  &:focus {
-    border: 1px solid $primary-color;
-    background-color: $primary-color;
-    color: #fff;
-  }
-
-  &:active,
-  &:active:focus,
-  &:active:hover {
-    border: 1px solid $primary-color;
-    background-color: $primary-color;
-    color: #fff;
-  }
-}
-
-.btn-primary.disabled,
-.btn-primary:disabled {
-  background-color: $primary-color;
-  border-color: $primary-color;
-}
-
-.btn-primary:not(:disabled):not(.disabled).active,
-.btn-primary:not(:disabled):not(.disabled):active,
-.show>.btn-primary.dropdown-toggle {
-  background-color: $primary-color;
-  border-color: $primary-color;
-}
 
 // scroll-top-btn
 .scroll-top-btn {
-  position: fixed;
-  right: 5px;
-  bottom: 5px;
-  @include translate(0, 50px);
-  z-index: 999;
-  width: auto;
-  background-color: #000;
-  color: #fff;
-  @include transition(.35s);
+    @include transition(.35s);
+    @include translate(0, 50px);
+    position: fixed;
+    right: 5px;
+    bottom: 5px;
+    z-index: 999;
+    width: auto;
+    background-color: #000;
+    color: #fff;
 
-  &:hover {
-    color: $primary-color;
-  }
+    &:hover {
+        color: var(--primary);
+    }
 
-  .fa {
-    font-size: 14px;
-  }
+    .fa {
+        font-size: 14px;
+    }
 
-  &.reveal-btn {
-    @include translate(0, 0);
-  }
+    &.reveal-btn {
+        @include translate(0, 0);
+    }
 
-  @media(min-width: 575px) {
-    bottom: 10px;
-    right: 20px;
-  }
+    @media(min-width: 575px) {
+        bottom: 10px;
+        right: 20px;
+    }
 }
