--- a/scss/vendor-extensions/_bootstrap.scss
+++ b/scss/vendor-extensions/_bootstrap.scss
@@ -2,22 +2,31 @@
 // This file contains all overrides/extensions to bootstrap css
 // -----------------------------------------------------------------------------
 .navbar {
-  background-color: #f8f8fa;
+    background-color: #f8f8fa;
 
-  .navbar-toggler {
-    margin-right: -5px;
-    border: 0;
-    color: $primary-color;
+    .navbar-toggler {
+        margin-right: -5px;
+        border: 0;
+        color: var(--primary);
 
-    &.collapsed {
-      color: #585858;
+        &.collapsed {
+            color: #585858;
+        }
+
+        .navbar-toggler-icon {
+            width: auto;
+            height: auto;
+            background-image: none;
+            font-size: 26px;
+        }
     }
+}
 
-    .navbar-toggler-icon {
-      width: auto;
-      height: auto;
-      background-image: none;
-      font-size: 26px;
-    }
-  }
+.container-limited {
+    max-width: 1920px;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
