--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,32 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains very basic styles.
 // -----------------------------------------------------------------------------
-a {
-    color: inherit;
-    text-decoration: none;
-
-    &:hover {
-        color: inherit;
-        text-decoration: underline;
-    }
-}
-
-.btn,
-a {
-    transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-}
-
-
-input[type="email"],
-input[type="password"],
-input[type="text"],
-textarea {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    -webkit-focus-ring-color: none;
-    outline: none;
+body {
+    
 }
 
 textarea {
