--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -12,3 +12,13 @@ textarea {
 iframe {
     display: block;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+        color: inherit;
+        text-decoration: none;
+    }
+}
