--- a/scss/components/_components.scss
+++ b/scss/components/_components.scss
@@ -90,3 +90,71 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.responsive-video-container {
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: #000;
+
+    &:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        content: "";
+    }
+
+    .responsive-video-width {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: -9999px;
+        right: -9999px;
+        margin: auto;
+    }
+
+    /* set video aspect ratio and vertically center */
+    .responsive-video-aspect {
+        position: absolute;
+        width: 100%;
+        height: 0;
+        top: -9999px;
+        bottom: -9999px;
+        margin: auto;
+        padding-bottom: 56.25%;
+        /* 16:9 ratio */
+        overflow: hidden;
+    }
+
+    .responsive-video-make-height {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+
+    .responsive-video-canvas {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        border: 0 none;
+        -webkit-transition: all ease 1s;
+        transition: all ease 1s;
+    }
+
+    #vimeo-video-canvas {
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
