--- a/scss/components/_components.scss
+++ b/scss/components/_components.scss
@@ -91,6 +91,12 @@
     margin-right: auto;
 }
 
+.swiper-component {
+    iframe, video {
+        pointer-events: none;
+    }
+}
+
 .responsive-video-container {
     position: absolute;
     z-index: 0;
@@ -158,3 +164,4 @@
         }
     }
 }
+
